envoy.yaml
# https://gist.github.com/lkpdn/170fac3ab5bbea3409ca79e58123f697
static_resources:                                                                                                                                                                                                                                                                                                                                                                             
  listeners:
  - name: listener_udp
    address:
      socket_address:
        protocol: UDP 
        address: 0.0.0.0
        port_value: 8443 
    # note
    per_connection_buffer_limit_bytes: 4294967295  # maximum
    reuse_port: true
    socket_options:
    - level: 1  # SOL_SOCKET
      name: 8  # SO_RCVBUF
      int_value: 1048576  # 1024*1024
      state: STATE_LISTENING
    udp_listener_config:
      quic_options:
        quic_protocol_options: {}
      downstream_socket_config:
        max_rx_datagram_size: 65535
        prefer_gro: true
    filter_chains:
    - transport_socket:
        name: envoy.transport_sockets.quic
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.transport_sockets.quic.v3.QuicDownstreamTransport
          downstream_tls_context:
            common_tls_context:
              tls_certificates:
              - certificate_chain:
                  filename: config/server.crt
                private_key:
                  filename: config/server.key
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: HTTP3
          stat_prefix: ingress_http
          generate_request_id: false
          route_config:
            name: local_route
            max_direct_response_body_size_bytes: 1073741824
            virtual_hosts:
            - name: local_service
              domains: "*" 
              routes:
              - match:
                  prefix: "/"
                direct_response:
                  status: 200 
                  body:
                    inline_string: 'ok'
          http3_protocol_options: {}
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
